GNOME Bugzilla – Bug 707774
ClutterClickAction can trigger a crash if disposes at inappropriate time
Last modified: 2013-09-10 20:53:22 UTC
If the ClutterClickAction is disposed before the timeout callback is called or before the capture-event signal is disconnect, you end up with a crash. Better cleanup all this in the dispose().
Created attachment 254493 [details] [review] click-action: disconnect signals and gsources on dispose
looks like a pretty obvious crash fix - we should probably get this into 3.10 ?
Review of attachment 254493 [details] [review]: yes, this looks okay.
Pushed to 1.16