click-action: disconnect signals and gsources on dispose

https://bugzilla.gnome.org/show_bug.cgi?id=707774